# jScope

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: TESTING.md  TODO.md
pyjab-stubs/: pyproject.toml
pyjab-stubs/src/pyjab-stubs/: __init__.pyi  accessibleinfo.pyi  config.pyi  jabdriver.pyi  jabelement.pyi  jabfixedfunc.pyi
pyjab-stubs/src/pyjab-stubs/common/: actorscheduler.pyi  by.pyi  exceptions.pyi  logger.pyi  role.pyi  service.pyi  shortcutkeys.pyi  singleton.pyi  states.pyi  textreader.pyi  types.pyi  win32utils.pyi  xpathparser.pyi
src/jab_inspector/: __init__.py
src/jab_inspector/app/: main.py  window.py
src/jab_inspector/backends/: mock.py
src/jab_inspector/core/: backend.py  controller.py  models.py
src/jab_inspector/ui/: property_panel.py  toolbar.py  tree_panel.py
src/jscope/app/: main.py  window.py
src/jscope/backends/: mock.py  pyjab.py
src/jscope/core/: backend.py  models.py
src/jscope/ui/: property_panel.py  toolbar.py
