[project]
name = "jab-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carolina Helena da Silva Corrêa", email = "carolcorrea555@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.10.2",
    "qdarkstyle>=3.2.3",
]

[project.scripts]
jab-inspector = "jab_inspector.app.main:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
