[project]
name = "jScope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carolina Helena da Silva Corrêa", email = "carolcorrea555@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyjab>=1.1.7 ; sys_platform == 'win32'",
    "pyside6>=6.10.2",
    "qdarkstyle>=3.2.3",
]

[project.scripts]
jscope = "jscope.app.main:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyjab-stubs",
    "types-pywin32>=311.0.0.20251008",
]

[tool.uv.workspace]
members = [
    "pyjab-stubs",
]

[tool.uv.sources]
pyjab-stubs = { workspace = true }
